# esp32-s2-eink

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  convert-files-and-mkdir.sh  convert-files-t.sh  convert-files.sh  convert-to-eink-image.sh  next-convert.sh
.cargo/: config.toml
src/: data.rs  eink.rs  fontdata.rs  main.rs  page_cache.rs  touch.rs
