[package]
name = "esp32-s2-test"
version = "0.1.0"
authors = ["yuiiio <atbjyk@protonmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32s2",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", features = [ "esp32s2" ] }
esp-println = { version = "0.9.0", features = ["esp32s2", "log"] }
log = { version = "0.4.20" }
embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs.git" }
embedded-hal-bus = "0.2.0"
[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
