[package]
name = "esp32-s2-test"
version = "0.1.0"
authors = ["yuiiio <atbjyk@protonmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.15.1", features = [
    "esp32s2",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", features = [ "esp32s2", "unstable", "psram" ] }
esp-println = { version = "0.13.1", features = ["esp32s2", "log"] }
log = { version = "0.4.26" }
embedded-sdmmc = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", features = [ "nightly" ] }
usb-device = "0.3.2"
usbd-serial = "0.2.2"
heapless = "0.8.0"
embedded-storage = "0.3.1"
esp-storage = { git = "https://github.com/esp-rs/esp-hal.git", features = ["esp32s2"] }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
